# loopkit

./: .gitignore  CLAUDE.md  LICENSE  README.md  loopcode.yaml  loopkit.yaml  package-lock.json  package.json
.github/workflows/: ci.yml
loops/: daily-triage.yaml  pr-review.yaml
runtime/: pyproject.toml
runtime/loopcode_runtime/: __init__.py  cli.py  engine.py  llm.py  models.py  reporter.py
runtime/loopkit_runtime/: __init__.py  cli.py  engine.py  llm.py  models.py  reporter.py
src/: cli.ts
src/commands/: init.ts  run.ts  status.ts  validate.ts
src/schema/: types.ts
src/utils/: logger.ts  lrs.ts
tests/: test_lrs.py
