[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopkit-runtime"
version = "0.1.0"
description = "The agent loop runtime for LoopKit — orchestrates LLM agents with Maker/Checker verification"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
loopkit-runtime = "loopkit_runtime.cli:main"
