[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopcode-runtime"
version = "0.1.0"
description = "The agent loop runtime for LoopCode — orchestrates LLM agents with Maker/Checker verification"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
loopcode-runtime = "loopcode_runtime.cli:main"
